--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -52,7 +52,8 @@ button {
 }
 
 button:hover,
-.active {
+.active,
+.highlight {
     background-color: var(--faint-blue);
     color: var(--blue);
 }
@@ -72,4 +73,17 @@ input {
 
 .shadow {
     box-shadow: 0 0 1px 0 var(--bright-black);
+}
+
+footer {
+    align-self: flex-end;
+    text-align: center;
+}
+
+.highlight {
+    padding: 0.3em;
+}
+
+.underline {
+    text-decoration: underline;
 }
