--- a/frontend/public/css/game.css
+++ b/frontend/public/css/game.css
@@ -145,5 +145,11 @@
     color: var(--grey);
     border-radius: 0;
     border-left: 2px solid var(--bright-black);
-    padding-left: 1em;
+    padding-left: 0.8em;
+}
+
+h1 > .label {
+    border: none;
+    padding: 0;
+    font-size: x-large;
 }
