--- a/frontend/public/css/game.css
+++ b/frontend/public/css/game.css
@@ -33,8 +33,7 @@
     display: flexbox;
     justify-content: space-between;
     padding: 10px;
-    font-size: small;
-    border-radius: 0;
+    border-radius: 5px;
     background-color: var(--black);
     border: solid 1px var(--bright-black);
     width: 100%;
@@ -43,12 +42,11 @@
 
 .settings * {
     background: transparent;
-    font-weight: 500;
+    font-size: medium;
 }
 
 .settings > #progress {
     align-self: center;
-    font-size: medium;
 }
 
 #gamemode {
@@ -71,18 +69,14 @@
 
 #word-input {
     margin: auto;
-    font-size: larger;
     padding: 0.5em 1em;
     border: none;
     width: 100%;
     outline: none;
     background-color: var(--black);
     border: solid 1px var(--bright-black);
-}
-
-#word-input input {
+    border-radius: 5px;
     font-size: large;
-    width: 100%;
 }
 
 .word-active {
