--- a/frontend/public/css/game.css
+++ b/frontend/public/css/game.css
@@ -3,13 +3,9 @@
     margin: auto;
     width: 800px;
     height: calc(100vh - 2em);
-    min-width: 800px;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-}
-
-#game {
     border-radius: 5px;
 }
 
@@ -30,14 +26,13 @@
 }
 
 .settings {
-    display: flexbox;
+    display: flex;
     justify-content: space-between;
     padding: 10px;
     border-radius: 5px;
     background-color: var(--black);
-    border: solid 1px var(--bright-black);
+    border: 1px solid var(--bright-black);
     width: 100%;
-    align-self: flex-start;
 }
 
 .settings * {
@@ -51,14 +46,10 @@
 
 #gamemode {
     border-right: 1px solid var(--bright-black);
-    border-radius: 0;
-    padding-right: 1em;
 }
 
 #count {
     border-left: 1px solid var(--bright-black);
-    border-radius: 0;
-    padding-left: 1em;
 }
 
 .wrap {
@@ -70,13 +61,12 @@
 #word-input {
     margin: auto;
     padding: 0.5em 1em;
-    border: none;
-    width: 100%;
-    outline: none;
-    background-color: var(--black);
-    border: solid 1px var(--bright-black);
+    border: 1px solid var(--bright-black);
     border-radius: 5px;
     font-size: large;
+    width: 100%;
+    background-color: var(--black);
+    outline: none;
 }
 
 .word-active {
@@ -98,10 +88,6 @@
 }
 
 .hidden {
-    display: none;
-}
-
-.hidden * {
     display: none;
 }
 
@@ -137,7 +123,6 @@
     font-weight: 500;
     font-size: x-large;
     color: var(--grey);
-    border-radius: 0;
     border-left: 2px solid var(--bright-black);
     padding-left: 0.8em;
 }
@@ -146,4 +131,66 @@ h1 > .label {
     border: none;
     padding: 0;
     font-size: x-large;
+}
+
+@media (max-width: 799px) {
+    #game {
+        width: 100%;
+        min-width: 0;
+    }
+
+    .settings,
+    #word-input,
+    #stats {
+        width: calc(100% - 40px);
+    }
+
+    .settings {
+        flex-direction: row;
+        align-items: center;
+        position: fixed;
+        top: 0;
+    }
+
+    .settings > *,
+    #count,
+    #progress,
+    #gamemode,
+    #gamemode > *,
+    #word-limit > *,
+    #time-limit > * {
+        border: none;
+        font-size: large;
+    }
+
+    .button {
+        padding: 0.25em 0.5em;
+    }
+
+    .active {
+        background-color: var(--faint-blue);
+    }
+
+    footer {
+        font-size: large;
+    }
+
+    footer > p {
+        border-radius: 5px;
+        padding: 0.5em;
+    }
+
+    #reset-btn {
+        margin: 0;
+        padding: 0.5em 1em;
+        border: 1px solid var(--bright-black);
+        border-radius: 5px;
+        font-size: x-large;
+        background-color: var(--black);
+        outline: none;
+    }
+
+    .hide-on-mobile {
+        display: none;
+    }
 }
