--- a/frontend/public/css/game.css
+++ b/frontend/public/css/game.css
@@ -152,12 +152,18 @@ h1 > .label {
     #game {
         width: 100%;
         min-width: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
+        height: 90vh;
     }
 
     .settings {
         position: fixed;
         top: 0;
-        width: calc(100% - 2.4em);
+        width: calc(100% - 3.8em);
     }
 
     #words {
@@ -185,6 +191,10 @@ h1 > .label {
 
     footer {
         font-size: large;
+        position: fixed;
+        bottom: 0;
+        margin-bottom: 0.5em;
+        width: calc(100% - 2.4em);
     }
 
     footer > p {
